--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,16 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"files.trimTrailingWhitespace": true,
 	"eslint.enable": false,
-	"editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/.DS_Store": true
+	},
+	"search.exclude": {
+		"**/out": true,
+		"**/node_modules": true,
+		"**/bower_components": true
+	}
 }
