--- a/package.json
+++ b/package.json
@@ -1,107 +1,107 @@
 {
-	"private": true,
-	"name": "stingray-debug",
-	"displayName": "Stingray Visual Studio Code Debugger Extension",
-	"version": "1.0.0",
-	"description": "Extension for developing the Stingray Debugger for VS Code.",
-	"author": {
-		"name": "Jonathan Schmidt",
-		"email": "jschmidt42@gmail.com"
-	},
-	"publisher": "jschmidt42",
-	"engines": {
-		"vscode": "^1.1.0",
-		"node": "^6.5.0"
-	},
-	"icon": "images/icon.svg",
-	"categories": [
-		"Debuggers"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/jschmidt42/stingray-vscode-debugger.git"
-	},
-	"dependencies": {
-		"vscode-debugprotocol": "^1.18.0-pre.2",
-		"vscode-debugadapter": "^1.18.0-pre.4"
-	},
-	"devDependencies": {
-		"@types/es6-collections": "^0.5.29",
-		"@types/es6-promise": "^0.0.32",
-		"@types/mocha": "^2.2.33",
-		"@types/node": "^6.0.50",
-		"typescript": "^2.0.10",
-		"mocha": "^3.1.2",
-		"vscode": "^1.0.3",
-		"vscode-debugadapter-testsupport": "^1.17.0"
-	},
-	"scripts": {
-		"prepublish": "node ./node_modules/typescript/bin/tsc -p ./src",
-		"compile": "node ./node_modules/typescript/bin/tsc -p ./src",
-		"watch": "node ./node_modules/typescript/bin/tsc -w -p ./src",
-		"postinstall": "node ./node_modules/vscode/bin/install"
-	},
-	"main": "./out/extension",
-	"activationEvents": [
-		"onCommand:extension.stingray-debug.getProgramName",
-		"onCommand:extension.stingray-debug.provideInitialConfigurations"
-	],
-	"contributes": {
-		"breakpoints": [
-			{
-				"language": "lua"
-			}
-		],
-		"debuggers": [
-			{
-				"type": "stingray",
-				"label": "Stingray Debugger",
-
-				"program": "./out/stingray-debugger.js",
-				"runtime": "node",
-
-				"variables": {
-					"AskForProgramName": "extension.stingray-debug.getProgramName"
-				},
-
-				"configurationSnippets": [
-					{
-						"label": "Stingray: Debug",
-						"description": "A new configuration for debugging a Stingray program",
-						"body": {
-							"type": "stingray",
-							"request": "launch",
-							"name": "${2:Launch Program}",
-							"ip": "127.0.0.1",
-							"port": 14030
-						}
-					}
-				],
-
-				"configurationAttributes": {
-					"launch": {
-						"required": [ "program" ],
-						"properties": {
-							"program": {
-								"type": "string",
-								"description": "Absolute path to a text file.",
-								"default": "${workspaceRoot}/${command:AskForProgramName}"
-							},
-							"stopOnEntry": {
-								"type": "boolean",
-								"description": "Automatically stop after launch.",
-								"default": true
-							},
-							"trace": {
-								"type": "boolean",
-								"description": "Enable logging of the Debug Adapter Protocol.",
-								"default": true
-							}
-						}
-					}
-				},
-				"initialConfigurations": "extension.stingray-debug.provideInitialConfigurations"
-			}
-		]
-	}
+  "private": true,
+  "name": "stingray-debug",
+  "displayName": "Stingray Visual Studio Code Debugger Extension",
+  "version": "1.0.0",
+  "description": "Extension for developing the Stingray Debugger for VS Code.",
+  "author": {
+    "name": "Jonathan Schmidt",
+    "email": "jschmidt42@gmail.com"
+  },
+  "publisher": "jschmidt42",
+  "engines": {
+    "vscode": "^1.1.0",
+    "node": "^6.5.0"
+  },
+  "icon": "images/icon.svg",
+  "categories": [
+    "Debuggers"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jschmidt42/stingray-vscode-debugger.git"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4",
+    "vscode-debugadapter": "^1.18.0-pre.4",
+    "vscode-debugprotocol": "^1.18.0-pre.2",
+    "ws": "^2.2.2"
+  },
+  "devDependencies": {
+    "@types/es6-collections": "^0.5.29",
+    "@types/es6-promise": "^0.0.32",
+    "@types/mocha": "^2.2.33",
+    "@types/node": "^6.0.50",
+    "typescript": "^2.0.10",
+    "mocha": "^3.1.2",
+    "vscode": "^1.0.3",
+    "vscode-debugadapter-testsupport": "^1.17.0"
+  },
+  "scripts": {
+    "prepublish": "node ./node_modules/typescript/bin/tsc -p ./src",
+    "compile": "node ./node_modules/typescript/bin/tsc -p ./src",
+    "watch": "node ./node_modules/typescript/bin/tsc -w -p ./src",
+    "postinstall": "node ./node_modules/vscode/bin/install"
+  },
+  "main": "./out/extension",
+  "activationEvents": [
+    "onCommand:extension.stingray-debug.getProgramName",
+    "onCommand:extension.stingray-debug.provideInitialConfigurations"
+  ],
+  "contributes": {
+    "breakpoints": [
+      {
+        "language": "lua"
+      }
+    ],
+    "debuggers": [
+      {
+        "type": "stingray",
+        "label": "Stingray Debugger",
+        "program": "./out/stingray-debugger.js",
+        "runtime": "node",
+        "variables": {
+          "AskForProgramName": "extension.stingray-debug.getProgramName"
+        },
+        "configurationSnippets": [
+          {
+            "label": "Stingray: Debug",
+            "description": "A new configuration for debugging a Stingray program",
+            "body": {
+              "type": "stingray",
+              "request": "launch",
+              "name": "${2:Launch Program}",
+              "ip": "127.0.0.1",
+              "port": 14030
+            }
+          }
+        ],
+        "configurationAttributes": {
+          "launch": {
+            "required": [
+              "program"
+            ],
+            "properties": {
+              "program": {
+                "type": "string",
+                "description": "Absolute path to a text file.",
+                "default": "${workspaceRoot}/${command:AskForProgramName}"
+              },
+              "stopOnEntry": {
+                "type": "boolean",
+                "description": "Automatically stop after launch.",
+                "default": true
+              },
+              "trace": {
+                "type": "boolean",
+                "description": "Enable logging of the Debug Adapter Protocol.",
+                "default": true
+              }
+            }
+          }
+        },
+        "initialConfigurations": "extension.stingray-debug.provideInitialConfigurations"
+      }
+    ]
+  }
 }
