--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "stingray-debug",
     "displayName": "Stingray Debugger",
-    "version": "0.10.2",
+    "version": "0.10.3",
     "description": "Extension to debug Autodesk Stingray application and games.",
     "author": {
         "name": "Jonathan Schmidt",
@@ -62,7 +62,7 @@
         "debuggers": [
             {
                 "type": "stingray",
-                "label": "Stingray Debugger",
+                "label": "Stingray",
                 "program": "./out/stingray-debugger.js",
                 "runtime": "node",
                 "variables": {
@@ -77,7 +77,7 @@
                             "request": "launch",
                             "name": "${2:Launch Program}",
                             "ip": "127.0.0.1",
-                            "port": 14030
+                            "port": 14031
                         }
                     }
                 ],
@@ -87,20 +87,20 @@
                             "program"
                         ],
                         "properties": {
-                            "program": {
+                            "ip": {
                                 "type": "string",
-                                "description": "Absolute path to a text file.",
-                                "default": "${workspaceRoot}/${command:AskForProgramName}"
+                                "description": "Stingray Application console IP",
+                                "default": "127.0.0.1"
                             },
-                            "stopOnEntry": {
-                                "type": "boolean",
-                                "description": "Automatically stop after launch.",
-                                "default": true
+                            "port": {
+                                "type": "number",
+                                "description": "Stingray Application console port (see settings.ini)",
+                                "default": 14031
                             },
                             "trace": {
                                 "type": "boolean",
                                 "description": "Enable logging of the Debug Adapter Protocol.",
-                                "default": true
+                                "default": false
                             }
                         }
                     }
