--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,21 @@
-.vscode/**/*
-.gitignore
-.travis.yml
-appveyor.yml
-src/**/*
-out/tests/**/*
-node_modules/**/*
-**/*.js.map
-!node_modules/vscode-debugprotocol/**/*
-!node_modules/vscode-debugadapter/**/*
+**/*.ts
+**/*.map
+.vscode/**
+lib/**
+typings/**
+testapp/**
+testdata/**
+test/**
+*.vsix
+gulpfile.js
+tsconfig.json
+tsd.json
+tslint.json
+webpack.config.js
+
+out/src/**
+out/test/**
+
+node_modules/.bin/**
+node_modules/bufferutil/**
+node_modules/utf-8-validate/**
