--- a/package.json
+++ b/package.json
@@ -71,21 +71,63 @@
                 },
                 "configurationSnippets": [
                     {
-                        "label": "Stingray: Debug",
-                        "description": "A new configuration for debugging a Stingray program",
+                        "label": "Stingray: Application (lua)",
+                        "description": "A new configuration for debugging a Stingray application.",
                         "body": {
                             "type": "stingray",
                             "request": "launch",
-                            "name": "${2:Launch Program}",
+                            "name": "${1:My application name}",
+                            "toolchain": "\"${2:path/to/stingray/installation}\"",
+                            "project_file": "^\"\\${workspaceRoot}/project.stingray_project\""
+                        }
+                    },
+                    {
+                        "label": "Stingray: Editor Engine (14030)",
+                        "description": "A new configuration for debugging a Stingray Editor Engine instance",
+                        "body": {
+                            "type": "stingray",
+                            "request": "attach",
+                            "name": "${2:Stingray Editor}",
                             "ip": "127.0.0.1",
-                            "port": 14031
+                            "port": 14030
+                        }
+                    },
+                    {
+                        "label": "Stingray: Asset Server (14032)",
+                        "description": "A new configuration for debugging the Stingray Asset Server console",
+                        "body": {
+                            "type": "stingray",
+                            "request": "attach",
+                            "name": "${2:Stingray Asset Server}",
+                            "ip": "127.0.0.1",
+                            "port": 14032
                         }
                     }
                 ],
                 "configurationAttributes": {
                     "launch": {
                         "required": [
-                            "program"
+                            "toolchain"
+                        ],
+                        "properties": {
+                            "toolchain": {
+                                "type": "string",
+                                "description": "Stingray binaries installation folder."
+                            },
+                            "project_file": {
+                                "type": "string",
+                                "description": "Stingray project settings file path (i.e. *.stingray_project)"
+                            },
+                            "command_line_args": {
+                                "type": "array",
+                                "description": "Additional command line arguments passed to the engine."
+                            }
+                        }
+                    },
+
+                    "attach": {
+                        "required": [
+                            "ip", "port"
                         ],
                         "properties": {
                             "ip": {
@@ -97,11 +139,6 @@
                                 "type": "number",
                                 "description": "Stingray Application console port (see settings.ini)",
                                 "default": 14031
-                            },
-                            "trace": {
-                                "type": "boolean",
-                                "description": "Enable logging of the Debug Adapter Protocol.",
-                                "default": true
                             }
                         }
                     }
