--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,13 @@
 			"args": [ "--server=4711" ],
 			"sourceMaps": true,
 			"outFiles": [ "${workspaceRoot}/out/**/*.js" ]
+		},
+		{
+			"type": "stingray",
+			"request": "attach",
+			"name": "Stingray Editor",
+			"ip": "127.0.0.1",
+			"port": 14030
 		}
 	],
 	"compounds": [
