--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Stingray Debugger",
   "version": "1.1.0",
   "description": "Extension to debug Autodesk Stingray application and games.",
+  "license": "MIT",
   "author": {
     "url": "https://github.com/jschmidt42",
     "name": "Jonathan Schmidt",
@@ -46,7 +47,7 @@
     "vscode-debugadapter-testsupport": "^1.17.0"
   },
   "scripts": {
-    "prepublish": "node ./node_modules/typescript/bin/tsc -p ./src",
+    "prepare": "node ./node_modules/typescript/bin/tsc -p ./src",
     "compile": "node ./node_modules/typescript/bin/tsc -p ./src",
     "watch": "node ./node_modules/typescript/bin/tsc -w -p ./src",
     "postinstall": "node ./node_modules/vscode/bin/install"
