--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"files.trimTrailingWhitespace": true,
 	"eslint.enable": false,
-	"editor.insertSpaces": false,
+	"editor.insertSpaces": true,
 	"files.exclude": {
 		"**/.git": true,
 		"**/.svn": true,
